--- a/projs/travel-tip/css/main.css
+++ b/projs/travel-tip/css/main.css
@@ -1,3 +1,272 @@
+@media (min-width: 600px) {
+    div.user-opts {
+        width: 100%;
+    }
+    .user-opts .btn {
+        width: 100px;
+    }
+    div.srch-address {
+        margin-right: 3px;
+    }
+    div.weather {
+        width: 100%;
+        padding: 15px;
+    }
+    .weather .weather-info img {
+        float: none;
+    }
+    .weather .weather-info h4:last-of-type {
+        display: inline-block;
+    }
+}
+
+@media (min-width: 800px) {
+    div.map {
+        max-height: 300px;
+    }
+    div.user-content {
+        flex-direction: row;
+        justify-content: space-around;
+        height: 280px;
+    }
+    .user-content .user-opts {
+        flex-direction: column;
+        justify-content: space-evenly;
+        width: 45%;
+        height: 60%;
+    }
+    .user-opts .srch-address {
+        flex-direction: column;
+        justify-content: space-between;
+        width: 100%;
+        height: 45%;
+        margin: 0;
+    }
+
+    .srch-address .user-inserted-loc {
+        width: 50%;
+    }
+
+    .user-opts .btn {
+        width: 50%;
+        margin: 0;
+    }
+    .user-content .weather {
+        width: 45%;
+    }
+
+}
+
+@media (min-width: 1050px) {
+    .map-title .curr-loc {
+        text-align: right;
+    }
+    body div.map {
+        width: 50%;
+        max-width: 800px;
+        max-height: 500px;
+        float: right;
+        margin-right: 20px;
+    }
+    body div.user-content {
+        flex-direction: column;
+        justify-content: space-between;
+        margin: 0 0 0 20px;
+        width: fit-content;
+        height: 500px;
+    }
+    body .user-content div.user-opts {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: unset;
+        width: 80%;
+        height: 20%;
+    }
+    .user-content .user-opts .srch-address {
+        flex-direction: row;
+        justify-content: unset;
+    }
+    div.user-opts .btn {
+        width: 45%;
+    }
+    div.user-opts .user-inserted-loc {
+        width: 45%;
+        margin-right: 1px;
+    }
+    div.user-opts .btn-user-loc {
+        margin-right: 1px;
+    }
+    .user-content div.weather {
+        width: fit-content;
+    }
+}
+
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100vh;
+    margin: 0;
+    font-family: 'Gloria Hallelujah', cursive;
+}
+
+h1, h2, h3, h4, h5 {
+    margin: 0;
+}
+
+/* Header */
+
+header {
+    height: 80px;
+    margin-bottom: 5px;
+}
+
+.bg-img {
+    background-image: url('../img/earth-bg.png');
+    background-position: 59% 21%;
+    opacity: .75;
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.logo {
+    font-family: 'Poiret One', cursive;
+    font-size: 3em;
+    margin: 0;
+    position: absolute;
+    top: 0;
+    padding: 10px;
+}
+
+/* Main */
+
+.curr-loc {
+    font-weight: normal;
+    font-size: 1.2em;
+    text-align: center;
+    padding: 0 5px 5px;
+    margin: 0;
+}
+
+.map {
+    width: 90%;
+    max-width: 800px;
+    height: 90%;
+    max-height: 270px;
+    margin: 0 auto;
+}
+
+div.user-content {
+    margin-top: 15px;
+}
+
+/* User Options */
+
+.user-opts {
+    width: 215px;
+    margin-bottom: 15px;
+}
+
+.srch-address {
+    margin-bottom: 3px;
+}
+
+.user-inserted-loc {
+    font-family: 'Gloria Hallelujah', cursive;
+    border: 1px solid rgb(68, 68, 68);
+    height: 35px;
+    width: 160px;
+    padding: 0 5px;
+    margin-right: 3px;
+}
+
+.btn {
+    cursor: pointer;
+    font-family: 'Poiret One', cursive;
+    font-weight: bold;
+    background-color: #94fc8f;
+    border: 1px solid rgb(68, 68, 68);
+    height: 35px;
+    width: 49%;
+    transition: all .3s;
+}
+
+.btn:hover {
+    /* font-size: 90%; */
+    background-color: rgb(101, 222, 239);
+}
+
+.btn-user-loc {
+    margin-right: 1.5px;
+}
+
+.btn-copy-loc {
+    margin-left: 1.5px;
+}
+
+/* Weather */
+
+.weather {
+    text-align: center;
+    background-color: #66ddef99;
+    border-radius: 10px;
+    width: 215px;
+}
+
+.weather h3 {
+    font-family: 'Poiret One', cursive;
+    font-size: 1.8em;
+    margin-bottom: 5px;
+}
+
+.weather-info h4:last-of-type {
+    font-weight: normal;
+}
+
+.weather-info img {
+    float: right;
+}
+
+.weather-info p {
+    margin: 5px 0 0 0;
+}
+
+.weather-info p span {
+    background-color: #a4fba5;
+    border: .4px solid rgb(68, 68, 68);
+    border-radius: 25%;
+    padding: 0 4px;
+}
+
+/* Helpers */
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.flex {
+    display: flex;
+}
+
+.column {
+    flex-direction: column;
+}
+
+.center-justify {
+    justify-content: center;
+}
+
+.center-align {
+    align-items: center;
+}
+
+.flex-wrap {
+    flex-wrap: wrap;
+}
+
 .hidden {
     display: none;
 }
